--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,4 +73,5 @@ jobs:
 
       - name: Terraform Apply
 #        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+#        run: terraform apply -auto-approve
+         run: terraform destroy -auto-approve
