--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,5 +73,6 @@ jobs:
 
       - name: Terraform Apply
 #        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-##        run: terraform apply -auto-approve
-         run: terraform destroy -auto-approve
+#        run: terraform apply -auto-approve
+#       run: terraform apply -auto-approve
+        run: terraform destroy -auto-approve
