--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -14,10 +14,10 @@ jobs:
           days-before-issue-stale: 60
           days-before-issue-close: 7
           stale-issue-label: 'stale'
-          stale-issue-message:
-          'This issue has been automatically marked as stale because it has not had
+          stale-issue-message: >
+          This issue has been automatically marked as stale because it has not had
           recent activity. It will be closed if no further activity occurs. Thank you
-          for your contributions.'
+          for your contributions.
 
           debug-only: 'true'
           remove-issue-stale-when-updated: 'true'
