--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,6 +20,6 @@ jobs:
                       recent activity. It will be closed if no further activity occurs. Thank you
                       for your contributions.
 
-          debug-only: 'true'
+          # debug-only: 'true'
           remove-issue-stale-when-updated: 'true'
           # debug-only: 'true'
