--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,10 +1,8 @@
 name: 'Stale issues'
-on: push
 run-name: ${{ github.actor }} is testing stale
-# please uncoment after testing stage
-  # schedule:
-  #   - cron: '0 1 * * *'
-  #   - cron: '* * * * *'
+on: 
+  schedule:
+    - cron: '45 17 * * 3'
 
 permissions:
   issues: write
