--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -2,7 +2,7 @@ name: 'Stale issues'
 run-name: ${{ github.actor }} is testing stale
 on: 
   schedule:
-    - cron: '45 17 * * 3'
+    - cron: '*/15 * * * *'
 
 permissions:
   issues: write
