--- a/.github/workflows/stale2.yml
+++ b/.github/workflows/stale2.yml
@@ -1,4 +1,4 @@
-name: 'Stale issues'
+name: 'Stale issues on push'
 run-name: 'Cleaning up issues ${{ github.run_number }}'
 on: push
   # schedule:
