Point backend to correct TFC org and workspace change again 2

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,13 +3,15 @@ name: "Terraform"
 on:
   push:
     branches:
-      - main
-  pull_request:
+      - master
+  pull_request: 
 
 jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -72,5 +74,5 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         run: terraform apply -auto-approve
