--- a/GITHUB_ENV.yaml
+++ b/GITHUB_ENV.yaml
@@ -2,9 +2,9 @@ steps:
   - name: Set the value
     id: step_one
     run: |
-      echo "action_state=yellow" >> "$GITHUB_ENV"
+      echo "GITHUB_TOKEN=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" >> "$GITHUB_ENV"
   - name: Use the value
     id: step_two
     run: |
-      printf '%s\n' "$action_state" # This will output 'yellow'
+      printf '%s\n' "$GITHUB_TOKEN" # This will output 'yellow'
 
