--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,8 @@
 name: "Terraform"
-
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
 
 jobs:
@@ -71,6 +70,7 @@ jobs:
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
+        
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
