--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,7 +2,7 @@ name: "Terraform"
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 
 jobs:
@@ -70,7 +70,7 @@ jobs:
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
-        
+
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
